change some format and enrich